--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<!-- Navigation Bar-->
-	<div class="container-fluid">
+	<div class="container-fluid sticky-top">
 		<div class="navbar navbar-brand"><h1>Food, LLc</h1></div>
 		<div class="d-block d-sm-none ">
 		<div class="dropdown">
